# cnn_carbon

./: .gitattributes  .gitignore  CNN_Carbon_Forest.ipynb  README.md  app.py  plot_training.py  pyproject.toml  requirements.txt  train_pipeline.py
.streamlit/: config.toml
app/: app.py
models/weights/: best_model_carbon.pth  training_history.csv
src/carbon_tracker/data/: dataset.py  extractor.py
src/carbon_tracker/models/: resnet.py
src/carbon_tracker/training/: loop.py
src/carbon_tracker/utils/: physics.py
