[project]
name = "carbon-tracker"
version = "0.1.0"
description = "Estimation of biomass and carbon stock using Sentinel-2 imagery and deep learning"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "earthengine-api>=0.1.390",
    "streamlit>=1.30.0",
    "folium>=0.15.0",
    "streamlit-folium>=0.18.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.7.2",
    "matplotlib>=3.10.9",
    "tifffile>=2025.5.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "jupyter>=1.0.0"
]
